COMMIT FIXING NEW UPDATES
